--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,31 @@ proguard/
 *.iws
 .idea/
 
+
+
 #Gradle
 .gradletasknamecache
 .gradle/
 build/
 bin/
+
+
+
+
+src/main/java/src/chapter10/examples/Animal.java
+
+src/main/java/src/chapter10/examples/Animal2.java
+
+src/test/java/chapter10/examplesTest/Parent.java
+
+src/test/java/chapter10/examplesTest/ExamplesTest.java
+
+src/main/java/src/chapter10/examples/Examples.java
+
+src/main/java/src/chapter10/examples/Examples2.java
+
+src/main/java/src/chapter10/examples/TestClass.java
+
+src/test/java/chapter10/examplesTest/Book.java
+
+src/test/java/chapter10/examplesTest/Animal2Test.java
